--- a/front/package.json
+++ b/front/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "styled-components": "^6.1.13"
+    "sass": "^1.81.0",
+    "styled-components": "^6.1.13",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
