--- a/StPractice/requirements.txt
+++ b/StPractice/requirements.txt
@@ -1,3 +1,6 @@
+Pillow
 Django~=4.2.0
-djangorestframework~=4.12.2
-djangorestframework-simplejwt~=5.3.1
+djangorestframework~=3.15.1
+drf-yasg~=1.21.7
+django-filters~=24.3
+django-cors-headers~=4.4.0
