--- a/front/package.json
+++ b/front/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -12,6 +11,8 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
+    "antd": "^5.22.6",
+    "axios": "^1.7.9",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
