--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "antd": "^5.22.6",
     "axios": "^1.7.9",
+    "moment": "^2.30.1",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
