--- a/front/package.json
+++ b/front/package.json
@@ -16,8 +16,10 @@
     "moment": "^2.30.1",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
     "sass": "^1.81.0",
@@ -35,6 +37,6 @@
     "globals": "^15.11.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^6.2.6"
   }
 }
